--- a/CSS/index.css
+++ b/CSS/index.css
@@ -25,7 +25,7 @@ body {
     width: 100%;
 }
 
-.caja-form div{
+.caja-form div {
     position: relative;
     margin: 0 10px;
 }
@@ -56,6 +56,14 @@ button {
 
 .boton3 {
     background: linear-gradient(90deg, rgb(108, 0, 101), rgb(67, 0, 0), rgb(69, 66, 0));
+}
+
+.boton4 {
+    background: linear-gradient(90deg, rgb(7, 0, 108), rgb(0, 47, 67), rgb(0, 68, 69));
+}
+
+.boton5 {
+    background: linear-gradient(90deg, rgb(156, 0, 130), rgb(50, 0, 143),rgb(165, 149, 0));
 }
 
 button:focus {
