--- a/CSS/Ejercicio7.css
+++ b/CSS/Ejercicio7.css
@@ -1,75 +1,99 @@
-body{
+body {
+    background-color: rgb(250, 177, 131);
+    height: 100vh;
     margin: 0;
     padding: 0;
-    height: 100vh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(20deg,rgb(255, 119, 119),rgb(255, 201, 100),rgb(255, 255, 121));
 }
 
-.caja-all{
+.contenedor-todo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
+}
+
+.contenedor-intermedio {
+    background: white;
+    width: 50%;
+    box-shadow: 1px 1px 20px 1px rgba(0, 0, 0, 0.8);
+    border-radius: 25px;
+    height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-h3{
-font-size: 40px;
-font-weight: 700;
-}
-
-.caja-interaccion{
-    background-color: white;
-    border-radius: 40%;
-    box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.5);
+.caja-input {
+    width: 100%;
+    margin: 20px;
     display: flex;
+    justify-content: center;
     align-items: center;
-justify-content: center;
     flex-direction: column;
-    width: 500px;
-    height: 400px;
-    gap: 20px;
 }
 
-.caja-interaccion label{
-font-size: 20px;
-font-weight: 500;
+p {
+    font-size: 30px;
+    font-weight: 600;
 }
 
-.caja-interaccion select{
-    border: 1px solid blue;
+input {
     width: 200px;
-    padding: 10px;
+    padding: 10px 0;
+    border: 1px solid black;
     border-radius: 10px;
-    outline:  0 none;
+    outline: 0 none;
     transition: all .4s;
+}
+
+input:hover {
+    border-color: blue;
+}
+
+input:focus {
+    border-color: aqua;
+}
+
+button {
+    position: relative;
+    left: 62px;
     border: none;
+    padding: 10px 0;
+    width: 200px;
+    border-radius: 20px;
+    background-color: green;
+    font-size: 20px;
+    font-weight: 500;
 }
-.caja-interaccion select:focus{
-    border-bottom: 2px solid blue;
-box-shadow: 1px 1px 10px 1px rgba(0, 0, 255, 0.5);
-}
-
-button{
-    font-weight: 700;
-    width: 100px;
-    padding: 10px;
-    border: 1px solid blue;
-    color: blue;
-    background: white;
-    border-radius: 25px;
-    transition: all 0.5s;
-}
-
 button:hover{
-    background: linear-gradient(90deg,blue,rgb(2, 150, 255),blue);
-    border-color: black;
-    color: white;
+    animation: movimiento 1s;
 }
 
+@keyframes movimiento {
+    20%{
+        transform: rotateY(20deg);
+    }
+
+    40%{
+        transform: rotateX(20deg);
+    }
+}
+
+/* === removing default button style ===*/
 .button {
+    margin: 0;
+    height: auto;
+    background: transparent;
+    padding: 0;
+    border: none;
+  }
+  
+  /* button styling */
+  .button {
     --border-right: 6px;
     --text-stroke-color: rgba(255,255,255,0.6);
     --animation-color: #37FF8B;
