--- a/WEB-INF/jspf/conexion.jspf
+++ b/WEB-INF/jspf/conexion.jspf
@@ -1,8 +1,8 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
 <%@taglib prefix="sql" uri="http://java.sun.com/jsp/jstl/sql" %>
-<sql:setDataSource var="uni"
-                   url="jdbc:mysql://localhost:3306/prueba?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC"
+<sql:setDataSource var="empleados"
+                   url="jdbc:mysql://localhost/parcial"
                    driver="com.mysql.jdbc.Driver"
                    user="root"
                    password=""
